# space_resources

./: CMakeLists.txt  LICENSE  package.xml
launch/: habitat_demonstration_unit_gz.launch.py  habitat_demonstration_unit_open_top_gz.launch.py  htv_transfer_vehicle_gz.launch.py  spawn_habitat_demonstration_unit.launch.py  spawn_htv_transfer_vehicle.launch.py
models/ground_plane/: model.sdf
models/habitat_demonstration_unit/: model.config  model.sdf
models/habitat_demonstration_unit/meshes/: habitat_demonstration_unit_part_1.dae  habitat_demonstration_unit_part_1_open_top.dae  habitat_demonstration_unit_part_1_open_top_solidified.dae  habitat_demonstration_unit_part_1_open_top_solidified_hole_center.dae  habitat_demonstration_unit_part_2.dae  hdu_builder.dae  hdu_part_2_dust_mitigation_module.dae
models/habitat_demonstration_unit/urdf/: habitat_demonstration_unit.urdf.xacro  habitat_demonstration_unit_open_top.urdf.xacro  habitat_demonstration_unit_open_top_no_bottom.urdf.xacro
models/htv_transfer_vehicle/: model.config  model.sdf
models/htv_transfer_vehicle/meshes/: htv_ep1a_1_100_v01.dae  htv_ep1a_1_100_v01_textured.dae
models/htv_transfer_vehicle/urdf/: htv1.urdf.xacro  htv1_external_pallet.macro.xacro  htv1_module.macro.xacro
rviz/: habitat_demonstration_unit.rviz  htv_transfer_vehicle.rviz
worlds/: habitat_demonstration_unit_gravity.sdf  habitat_demonstration_unit_ground.sdf
